--- a/index.html
+++ b/index.html
@@ -11,6 +11,60 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "name": "Walter Leturia",
+          "disambiguatingDescription": "Estudiante Universitario",
+          "hasOccupation": {
+            "@type": "Occupation",
+            "name": "Desarrollador",
+            "educationRequirements": "Ingenieria de Software",
+          }, 
+          "email": "mailto:leturia@live.com",
+          "image": "headshot.jpg",
+          "jobTitle": "Desarrollador",
+          "telephone": "969178240",
+          "url": "http://www.wleturia.github.io",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Peru",
+            "addressRegion": "PE",
+            "postalCode": "13011",
+            "streetAddress": "Lorem, ipsum dolor."
+        },
+        "knowsLanguage":  "English",
+        "birthPlace": "Trujillo",
+        "birthDate": "1999-08-04",
+        "alumniOf": {
+            "@type": "Organization",
+            "legalName" : "Universidad Privada Antenor Orrego"
+        },
+        "gender": "Masculino",
+        "height":{
+            "@type": "QuantitativeValue",
+            "unitText": "1.78",
+            "unitCode" : "m"
+        },
+        "weight":{
+            "@type": "QuantitativeValue",
+            "unitText": "86",
+            "unitCode" : "kg"
+        },
+        "workLocation":{
+            "@type": "Place",
+            "address" : "direccion de trabajo",
+            "slogan" : "Nisira"
+        },
+        "worksFor":{
+            "@type": "Organization",
+            "address" : "Direccion de Nisira",
+            "legalName" : "Nisira" 
+        }
+    }
+    </script>
+
     <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -25,14 +79,15 @@
 
             <div id="name">
                 <h1 class="quickFade delayTwo">Walter Leturia</h1>
-                <h2 class="quickFade delayThree">Estudiante</h2>
+                <h2 class="quickFade delayThree">Estudiante Universitario</h2>
             </div>
 
             <div id="contactDetails" class="quickFade delayFour">
                 <ul>
                     <li>e-mail: <a href="mailto:joe@bloggs.com" target="_blank">leturia@live.com</a></li>
                     <li>pagina web: <a href="http://www.bloggs.com">www.wleturia.github.io</a></li>
-                    <li>tel&eacute;fono: 01234567890</li>
+                    <li>tel&eacute;fono: 969178240</li>
+                    <li>direcci&oacute;n: Lorem, ipsum dolor.</li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -64,8 +119,9 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>Trabajo en Empresa 001</h2>
+                        <h2>Nisira</h2>
                         <p class="subDetails">Febrero 2019 - Present</p>
+                        <p>Direccion de Nisira</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus
                             hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id
                             sapien quis libero interdum porttitor.</p>
