--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           "hasOccupation": {
             "@type": "Occupation",
             "name": "Desarrollador",
-            "educationRequirements": "Ingenieria de Software",
+            "educationRequirements": "Ingenieria de Software"
           }, 
           "email": "mailto:leturia@live.com",
           "image": "headshot.jpg",
@@ -52,15 +52,15 @@
             "unitText": "86",
             "unitCode" : "kg"
         },
-        "workLocation":{
-            "@type": "Place",
-            "address" : "direccion de trabajo",
-            "slogan" : "Nisira"
-        },
+      
         "worksFor":{
             "@type": "Organization",
             "address" : "Direccion de Nisira",
-            "legalName" : "Nisira" 
+            "legalName" : "Nisira",
+              "workLocation":{
+            "@type": "Place",
+            "address" : "direccion de trabajo"
+        }
         }
     }
     </script>
