--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           "hasOccupation": {
             "@type": "Occupation",
             "name": "Desarrollador",
-            "educationRequirements": "Ingenieria de Software"
+            "educationRequirements": "Ingenieria de Software",
+            "sameAs": [
+			"https://www.wikidata.org/wiki/Q183888"]
           }, 
           "email": "mailto:leturia@live.com",
           "image": "headshot.jpg",
@@ -32,14 +34,18 @@
             "addressLocality": "Peru",
             "addressRegion": "PE",
             "postalCode": "13011",
-            "streetAddress": "Lorem, ipsum dolor."
+            "streetAddress": "Lorem, ipsum dolor.",
+            "sameAs": [
+			"https://www.wikidata.org/wiki/Q419"]
         },
         "knowsLanguage":  "English",
         "birthPlace": "Trujillo",
         "birthDate": "1999-08-04",
         "alumniOf": {
             "@type": "Organization",
-            "legalName" : "Universidad Privada Antenor Orrego"
+            "legalName" : "Universidad Privada Antenor Orrego",
+              "sameAs": [
+			"http://www.upao.edu.pe/"]
         },
         "gender": "Masculino",
         "height":{
@@ -59,7 +65,9 @@
             "legalName" : "Nisira",
               "workLocation":{
             "@type": "Place",
-            "address" : "direccion de trabajo"
+            "address" : "direccion de trabajo",
+               "sameAs": [
+			"http://www.nisira.com.pe/"]
         }
         }
     }
